Added local memory and displaying more info.

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
       <label for='q2'>Your answer to the next question is true:</label>
       <form id = 'q2'>
-        <input type="radio" id="false1" name="false1" value="false1">
+        <input type="radio" id="false1" name="false" value="false1">
         <label for="false1">False</label><br>
-        <input type="radio" id="false2" name="false2" value="false2">
-        <label for="false2">False</label><br>
+        <input type="radio" id="false2" name="false" value="false2">
+        <label for="false2">False please</label><br>
       </form>
       <br />
 
@@ -37,9 +37,9 @@
         <input type="checkbox" id="true1" name="true1" value="true1">
         <label for="true1"> True</label><br>
         <input type="checkbox" id="true2" name="true2" value="true2">
-        <label for="true2"> True</label><br>
+        <label for="true2"> Very true</label><br>
         <input type="checkbox" id="true3" name="true3" value="true3">
-        <label for="true3"> True</label>
+        <label for="true3"> It appears to be true </label>
       </form>
       <br />
 
