Whoops don't commit before you test lol. This should actually work now.

--- a/synResult.html
+++ b/synResult.html
@@ -3,7 +3,7 @@
   <head>
     <title>Interactive Synesthesia Results</title>
     <meta charset="utf-8"></meta>
-    <script defer src="synTest.js"></script>
+    <script defer src="syn.js"></script>
     <style>
     #myDiv, button {
       font-size: 150%;
@@ -39,7 +39,6 @@
       <button onclick='colorWords()'>Show me the magic, please.</button>
 
       <!-- Buttom for clearing data -->
-      <!-- TODO: Add a pop up asking "are you surrrreeeeeeeeee u wanna do this??????" -->
       <button onclick='clearStorage()'>Clear my data.</button>
     </div>
   </body>
