--- a/synTest.html
+++ b/synTest.html
@@ -3,7 +3,7 @@
   <head>
     <title>Synesthesia Test</title>
     <meta charset="utf-8"></meta>
-    <script defer src="synTest.js"></script>
+    <script defer src="syn.js"></script>
     <style>
     #myDiv, button {
       font-size: 150%;
