Added onchange event to color picker, and scrapped old test code. You will be missed for beginning something greater than yourself. Rest in peace, index.html and myScript.js. Your names may be forgotten, but your impacts will never vanish. Your purpose has been served; the mission is over. Until we meet again, old code, I bid you farewell.

--- a/synTest.html
+++ b/synTest.html
@@ -28,7 +28,7 @@
       <!-- Color picker -->
       <label for='colorForm'>Select which color you see the following symbol in:</label>
       <form id = "colorForm">
-        <input type="color" id="color" name="color">
+        <input type="color" id="color" name="color" onchange="changeColor()">
       </form>
 
       <!-- Button for "I don't percieve this in a color" -->
